<resources>
    <string name="app_name">InventoryApp</string>
    <string name="login">Login</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="data_inventory">Data Inventory</string>
    <string name="add_new_item">Add New Item</string>
    <string name="delete">Delete</string>
    <string name="item">Item: </string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Qty: </string>
    <string name="description">Description: </string>
    <string name="item_quantity">0</string>
    <string name="item_description">Item Description: </string>
    <string name="sms_permissions_statement">This app requires SMS permissions to send notifications when the inventory is at zero.</string>
    <string name="grant_sms_permissions">Grant SMS Permission"</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="quantity_count">0</string>
    <string name="id">ID: </string>
    <string name="remove_item">Remove Item</string>
    <string name="description_placeholder">Description Placeholder</string>
    <string name="full_view">Full View</string>
    <string name="edit_item" >Edit Item</string>
    <string name="close_button">Close</string>
    <string name="sku">SKU: </string>
    <string name="sku_input">A0</string>
    <string name="sku_num">0</string>
    <string name="price">Price: $</string>
    <string name="price_num">0</string>
    <string name="category">Category: </string>
    <string name="category_placeholder">Category Placeholder</string>
</resources>