<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <!--Layout for individual item views in Recycler View-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--Item Text-->
        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/item"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Item Name Text -->
        <TextView
            android:id="@+id/item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/item_name"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!--Layout for individual sku numbers in Recycler View-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--Item Text-->
        <TextView
            android:id="@+id/sku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/sku"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Item Name Text -->
        <TextView
            android:id="@+id/sku_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/sku_num"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!--Layout for individual Price in Recycler View-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--Item Text-->
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/price"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Item Name Text -->
        <TextView
            android:id="@+id/price_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/price_num"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!-- Horizontal Layout for Item and Quantity Information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--ID Text-->
        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:text="@string/id"
            android:textAlignment="gravity"
            android:textSize="25sp" />

        <!--ID Number-->
        <TextView
            android:id="@+id/id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/quantity_count"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="gravity"
            android:textSize="25sp" />

        <!--Quantity Text-->
        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:text="@string/quantity"
            android:textAlignment="gravity"
            android:textSize="25sp" />

        <!--Quantity Count Number-->
        <TextView
            android:id="@+id/quantity_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/quantity_count"
            android:layout_marginStart="8dp"
            android:textAlignment="gravity"
            android:textSize="25sp" />

        <!--Increase Quantity Button-->
        <ImageButton
            android:id="@+id/increase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:maxWidth="60dp"
            android:minHeight="50dp"
            android:maxHeight="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/increase_quantity"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/plus_button" />

        <!--Decrease Quantity Button-->
        <ImageButton
            android:id="@+id/decrease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:maxWidth="60dp"
            android:minHeight="50dp"
            android:maxHeight="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/decrease_quantity"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/minus_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <!--Delete Button-->
            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:maxWidth="60dp"
                android:minHeight="50dp"
                android:maxHeight="60dp"
                android:layout_marginStart="100dp"
                android:contentDescription="@string/remove_item"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

            android:src="@drawable/trash_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!--Item Description Text-->
    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/description_placeholder"
        android:textAlignment="gravity"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Horizontal Layout for Full View and Edit Item Information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    <Button
        android:id="@id/full_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="155dp"
        android:maxWidth="60dp"
        android:minHeight="50dp"
        android:maxHeight="60dp"
        android:text="@string/full_view"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:contentDescription="@string/full_view"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:maxWidth="60dp"
        android:minHeight="50dp"
        android:maxHeight="60dp"
        android:text="@string/edit_item"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:contentDescription="@string/edit_item"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>
</LinearLayout>