<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!--User Name Edit Text-->
    <EditText
        android:id="@+id/enterUserName"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enterPassword"
        android:textSize="30sp"
        android:hint="@string/enter_user_name"
        android:autofillHints="username"
        android:inputType="text" />

    <!--Password Edit Text-->
    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="@id/enterUserName"
        android:textSize="30sp"
        android:hint="@string/enter_password"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <!--Login Button-->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/createAccount"
        app:layout_constraintTop_toBottomOf="@id/enterPassword"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <!--Create Account Button-->
    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <!-- TextView for displaying error messages -->
    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text=""
        android:textSize="20dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/createAccount"
        app:layout_constraintEnd_toEndOf="@id/createAccount"
        app:layout_constraintTop_toBottomOf="@+id/createAccount"
        />

</androidx.constraintlayout.widget.ConstraintLayout>